// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CD enabled CD stage form READONLY mode: disabled CD stage 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main container"
    >
      <div
        class="formGroup sm delegate"
      >
        <div
          class="bp3-form-group"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="StyledProps--font StyledProps--main fieldSelectorContainer"
            >
              <div
                class="bp3-form-group"
                style="flex-grow: 1; margin-bottom: 0px;"
              >
                <label
                  class="bp3-label"
                  for="delegateSelectors"
                >
                  <div
                    class="formLabel"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="pipelineInputSetFormTest_delegateSelectors"
                    >
                      common.defineDelegateSelector
                    </span>
                    <div
                      class="bp3-popover-wrapper typeSelectorWrapper"
                    >
                      <div
                        class="bp3-popover-target typeSelector"
                      >
                        <button
                          class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="bp3-icon StyledProps--main icon fixed"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="wrapper wrapper"
                    data-name="DelegateSelectors"
                  >
                    <div
                      class="bp3-popover-wrapper delegateInput delegatePopover bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="bp3-input bp3-tag-input bp3-disabled bp3-fill bp3-multi-select TagInput--readonly"
                          >
                            <div
                              class="bp3-tag-input-values"
                            >
                              <input
                                class="bp3-input-ghost bp3-multi-select-tag-input-input"
                                disabled=""
                                placeholder="delegate.Delegate_Selector_placeholder"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          id="Stage.testCdStage1"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-top-medium StyledProps--padding-left-large"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100 StyledProps--font-weight-semi-bold"
            >
              Stage: 
              testCdStage1
            </p>
          </div>
          <div
            class="topAccordion"
          />
        </div>
      </div>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          id="Stage.parallelStage1"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-top-medium StyledProps--padding-left-large"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100 StyledProps--font-weight-semi-bold"
            >
              Stage: 
              parallelStage1
            </p>
          </div>
          <div
            class="topAccordion"
          />
        </div>
      </div>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          id="Stage.parallelStage2"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-top-medium StyledProps--padding-left-large"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100 StyledProps--font-weight-semi-bold"
            >
              Stage: 
              parallelStage2
            </p>
          </div>
          <div
            class="topAccordion"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CI enabled CI READONLY mode: CI stage readonly mode 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main container"
    >
      <div
        class="formGroup sm delegate"
      >
        <div
          class="bp3-form-group"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="StyledProps--font StyledProps--main fieldSelectorContainer"
            >
              <div
                class="bp3-form-group"
                style="flex-grow: 1; margin-bottom: 0px;"
              >
                <label
                  class="bp3-label"
                  for="delegateSelectors"
                >
                  <div
                    class="formLabel"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="pipelineInputSetFormTest_delegateSelectors"
                    >
                      common.defineDelegateSelector
                    </span>
                    <div
                      class="bp3-popover-wrapper typeSelectorWrapper"
                    >
                      <div
                        class="bp3-popover-target typeSelector"
                      >
                        <button
                          class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="bp3-icon StyledProps--main icon fixed"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="wrapper wrapper"
                    data-name="DelegateSelectors"
                  >
                    <div
                      class="bp3-popover-wrapper delegateInput delegatePopover bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="bp3-input bp3-tag-input bp3-disabled bp3-fill bp3-multi-select TagInput--readonly"
                          >
                            <div
                              class="bp3-tag-input-values"
                            >
                              <input
                                class="bp3-input-ghost bp3-multi-select-tag-input-input"
                                disabled=""
                                placeholder="delegate.Delegate_Selector_placeholder"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-top-medium StyledProps--padding-left-large"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="ciCodebase"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100 StyledProps--font-weight-semi-bold"
            data-name="ci-codebase-title"
          >
            ciCodebase
          </p>
        </div>
      </div>
      <div
        class="topAccordion"
      >
        <div
          class="accordionSummary"
        >
          <div
            class="nestedAccordions"
            style="width: 50%;"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-huge StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-start StyledProps--padding-top-small StyledProps--padding-left-xsmall StyledProps--padding-bottom-xsmall StyledProps--margin-left-large"
              >
                <label
                  class="bp3-control bp3-radio bp3-disabled StyledProps--font Radio--radio StyledProps--main StyledProps--font-variation-form-label"
                >
                  <input
                    disabled=""
                    type="radio"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  gitBranch
                </label>
                <label
                  class="bp3-control bp3-radio bp3-disabled StyledProps--font Radio--radio StyledProps--main StyledProps--font-variation-form-label"
                >
                  <input
                    disabled=""
                    type="radio"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  gitTag
                </label>
                <label
                  class="bp3-control bp3-radio bp3-disabled StyledProps--font Radio--radio StyledProps--main StyledProps--font-variation-form-label"
                >
                  <input
                    disabled=""
                    type="radio"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  pipeline.gitPullRequest
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CI enabled CI present in one of the stages: CI codebase input set form 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main container"
    >
      <div
        class="formGroup sm delegate"
      >
        <div
          class="bp3-form-group"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="StyledProps--font StyledProps--main fieldSelectorContainer"
            >
              <div
                class="bp3-form-group"
                style="flex-grow: 1; margin-bottom: 0px;"
              >
                <label
                  class="bp3-label"
                  for="delegateSelectors"
                >
                  <div
                    class="formLabel"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="pipelineInputSetFormTest_delegateSelectors"
                    >
                      common.defineDelegateSelector
                    </span>
                    <div
                      class="bp3-popover-wrapper typeSelectorWrapper"
                    >
                      <div
                        class="bp3-popover-target typeSelector"
                      >
                        <button
                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="bp3-icon StyledProps--main icon fixed"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="wrapper wrapper"
                    data-name="DelegateSelectors"
                  >
                    <div
                      class="bp3-popover-wrapper delegateInput delegatePopover bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="bp3-input bp3-tag-input bp3-fill bp3-multi-select"
                          >
                            <div
                              class="bp3-tag-input-values"
                            >
                              <input
                                class="bp3-input-ghost bp3-multi-select-tag-input-input"
                                placeholder="delegate.Delegate_Selector_placeholder"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-top-medium StyledProps--padding-left-large"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="ciCodebase"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100 StyledProps--font-weight-semi-bold"
            data-name="ci-codebase-title"
          >
            ciCodebase
          </p>
        </div>
      </div>
      <div
        class="topAccordion"
      >
        <div
          class="accordionSummary"
        >
          <div
            class="nestedAccordions"
            style="width: 50%;"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-huge StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-start StyledProps--padding-top-small StyledProps--padding-left-xsmall StyledProps--padding-bottom-xsmall StyledProps--margin-left-large"
              >
                <label
                  class="bp3-control bp3-radio StyledProps--font Radio--radio StyledProps--main StyledProps--font-variation-form-label"
                >
                  <input
                    type="radio"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  gitBranch
                </label>
                <label
                  class="bp3-control bp3-radio StyledProps--font Radio--radio StyledProps--main StyledProps--font-variation-form-label"
                >
                  <input
                    type="radio"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  gitTag
                </label>
                <label
                  class="bp3-control bp3-radio StyledProps--font Radio--radio StyledProps--main StyledProps--font-variation-form-label"
                >
                  <input
                    type="radio"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  pipeline.gitPullRequest
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CI enabled PR Number build radio option should not be visible for CodeCommit type connector: PR Number build radio option should not be visible for CodeCommit type connector 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main container"
    >
      <div
        class="formGroup sm delegate"
      >
        <div
          class="bp3-form-group"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="StyledProps--font StyledProps--main fieldSelectorContainer"
            >
              <div
                class="bp3-form-group"
                style="flex-grow: 1; margin-bottom: 0px;"
              >
                <label
                  class="bp3-label"
                  for="delegateSelectors"
                >
                  <div
                    class="formLabel"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="pipelineInputSetFormTest_delegateSelectors"
                    >
                      common.defineDelegateSelector
                    </span>
                    <div
                      class="bp3-popover-wrapper typeSelectorWrapper"
                    >
                      <div
                        class="bp3-popover-target typeSelector"
                      >
                        <button
                          class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="bp3-icon StyledProps--main icon fixed"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="wrapper wrapper"
                    data-name="DelegateSelectors"
                  >
                    <div
                      class="bp3-popover-wrapper delegateInput delegatePopover bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="bp3-input bp3-tag-input bp3-disabled bp3-fill bp3-multi-select TagInput--readonly"
                          >
                            <div
                              class="bp3-tag-input-values"
                            >
                              <input
                                class="bp3-input-ghost bp3-multi-select-tag-input-input"
                                disabled=""
                                placeholder="delegate.Delegate_Selector_placeholder"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-top-medium StyledProps--padding-left-large"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="ciCodebase"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100 StyledProps--font-weight-semi-bold"
            data-name="ci-codebase-title"
          >
            ciCodebase
          </p>
        </div>
      </div>
      <div
        class="topAccordion"
      >
        <div
          class="accordionSummary"
        >
          <div
            class="nestedAccordions"
            style="width: 50%;"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-huge StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-start StyledProps--padding-top-small StyledProps--padding-left-xsmall StyledProps--padding-bottom-xsmall StyledProps--margin-left-large"
              >
                <label
                  class="bp3-control bp3-radio bp3-disabled StyledProps--font Radio--radio StyledProps--main StyledProps--font-variation-form-label"
                >
                  <input
                    disabled=""
                    type="radio"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  gitBranch
                </label>
                <label
                  class="bp3-control bp3-radio bp3-disabled StyledProps--font Radio--radio StyledProps--main StyledProps--font-variation-form-label"
                >
                  <input
                    disabled=""
                    type="radio"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  gitTag
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
